objects/Product2.object
<CustomObject>
    <fields>
        <fullName>CAS_Number__c</fullName>
        <description>Chemical Abstracts Service number.</description>
        <externalId>true</externalId>
        <inlineHelpText>Chemical Abstracts Service number.</inlineHelpText>
        <label>CAS Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CensusNumber__c</fullName>
        <label>Census Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Product Class (PHL1) imported</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCSProductFamilyCode__c</fullName>
        <label>Product Family Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_E_Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GS&amp;E Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>Group(PHL3) imported</description>
        <label>Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PANumber__c</fullName>
        <description>Refers to &quot;PA Group&quot; in DCS, CC 502, far right column.</description>
        <inlineHelpText>Refers to &quot;PA Group&quot; in DCS, CC 502, far right column.</inlineHelpText>
        <label>PA Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <picklist>
            <picklistValues>
                <fullName>100# Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50# Bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supersacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Totes</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Producers__c</fullName>
        <label>Producers</label>
        <picklist>
            <picklistValues>
                <fullName>Church &amp; Dwight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dow Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exxon Mobil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lyondell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunoco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Univar</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Product family populated by Data Loader.</description>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Manager</description>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Class__c</fullName>
        <description>Sub-Class(PHL2) imported</description>
        <label>Sub Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Family__c</fullName>
        <description>Sub-Family(PHL5) imported</description>
        <label>Sub Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USPOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for specifying a product not found during USPOT Opportunity Creation.</description>
        <inlineHelpText>Used for specifying a product not found during USPOT Opportunity Creation.  Only 1 product can have this setting.</inlineHelpText>
        <label>USPOT</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>